=== 3.22.0 (2011-04-01)

* Add disconnect detection to tinytds adapter, though correct behavior may require an update to tiny_tds (cult_hero)

* Add Dataset/Database#mssql_unicode_strings accessor when connecting to MSSQL to control string literalization (semmons99, jeremyevans)

* Fix ODBC::Time instance handling in the odbc adapter (jeremyevans)

* Use Sequel.application_timezone when connecting in the oracle adapter to set the connection's session's timezone (jmthomas)

* In the ADO adapter, assume access to SQL Server if a :conn_string option is given that doesn't indicate Access/Jet (damir.si) (#332)

* Use the correct class when loading instances for descendents of model classes that use single table inheritance (jeremyevans)

* Support for COLLATE in column definitions (jfirebaugh)

* Don't use a schema when creating a temporary table (jeremyevans)

* Make migrator work correctly when a default_schema is set (jeremyevans) (#331)

=== 3.21.0 (2011-03-01)

* Make symbol splitting (:table__column___alias) work correctly for identifiers that are not in the \w character class (authorNari)

* Enable row locks in Oracle (authorNari)

* Prefer cover? over include? for validates_includes/validates_inclusion_of (jeremyevans)

* Make using NULL/NOT NULL, DEFAULT, and UNIQUE column options work correctly on H2 and possibly Oracle (jeremyevans)

* Make bin/sequel accept file arguments and work correctly when $stdin is not a tty (jeremyevans)

* Add support for -I and -r options to bin/sequel (jeremyevans)

* Sequel::Model.plugin can now be overridden just like the other Model methods (jeremyevans)

* Add tinytds adapter, the best way to connect to MSSQL from a C based ruby running on *nix (jeremyevans)

* Recognize bigint unsigned as a Bignum type in the schema dumper (gamespy-tech) (#327)

* Add Dataset#calc_found_rows for MySQL datasets (macks)
